{
  "version": 4,
  "terraform_version": "1.0.10",
  "serial": 14,
  "lineage": "d0491ad3-96b3-b850-5328-330303304d92",
  "resources": [
    {
      "module": "module.networkModule",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:709774649120:security-group/sg-03ae9d0688540e25e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03ae9d0688540e25e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16",
                  "103.152.126.0/23",
                  "103.152.126.33/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "tuskcon_sg_public_subnets-tuskcon",
            "name_prefix": "",
            "owner_id": "709774649120",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f0c171d91d223219"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networkModule.data.http.my_public_ip",
            "module.networkModule.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networkModule.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:709774649120:internet-gateway/igw-041fdc4707500212f",
            "id": "igw-041fdc4707500212f",
            "owner_id": "709774649120",
            "tags": {
              "Name": "tuskcon_vpc-tuskcon"
            },
            "tags_all": {
              "Name": "tuskcon_vpc-tuskcon"
            },
            "vpc_id": "vpc-0f0c171d91d223219"
          },
          "dependencies": [
            "module.networkModule.module.vpc.aws_vpc.this",
            "module.networkModule.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networkModule.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-041fdc4707500212f",
            "id": "r-rtb-0753fadc628de25541080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0753fadc628de2554",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networkModule.module.vpc.aws_internet_gateway.this",
            "module.networkModule.module.vpc.aws_route_table.public",
            "module.networkModule.module.vpc.aws_vpc.this",
            "module.networkModule.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networkModule.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:709774649120:route-table/rtb-0753fadc628de2554",
            "id": "rtb-0753fadc628de2554",
            "owner_id": "709774649120",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tuskcon_vpc-tuskcon-public"
            },
            "tags_all": {
              "Name": "tuskcon_vpc-tuskcon-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0c171d91d223219"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networkModule.module.vpc.aws_vpc.this",
            "module.networkModule.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networkModule.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04dbc107577d96a81",
            "route_table_id": "rtb-0753fadc628de2554",
            "subnet_id": "subnet-0e95860f6aacca019"
          },
          "dependencies": [
            "module.networkModule.data.aws_availability_zones.available",
            "module.networkModule.module.vpc.aws_route_table.public",
            "module.networkModule.module.vpc.aws_subnet.public",
            "module.networkModule.module.vpc.aws_vpc.this",
            "module.networkModule.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networkModule.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:709774649120:subnet/subnet-0e95860f6aacca019",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.0.0/16",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e95860f6aacca019",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "709774649120",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tuskcon_vpc-tuskcon-public-ap-southeast-2a"
            },
            "tags_all": {
              "Name": "tuskcon_vpc-tuskcon-public-ap-southeast-2a"
            },
            "vpc_id": "vpc-0f0c171d91d223219"
          },
          "dependencies": [
            "module.networkModule.data.aws_availability_zones.available",
            "module.networkModule.module.vpc.aws_vpc.this",
            "module.networkModule.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networkModule.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:709774649120:vpc/vpc-0f0c171d91d223219",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-078280052fb992519",
            "default_route_table_id": "rtb-007376c69f8cf752a",
            "default_security_group_id": "sg-06132d9a1da15de1a",
            "dhcp_options_id": "dopt-36f22452",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f0c171d91d223219",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-007376c69f8cf752a",
            "owner_id": "709774649120",
            "tags": {
              "Name": "tuskcon_vpc-tuskcon"
            },
            "tags_all": {
              "Name": "tuskcon_vpc-tuskcon"
            }
          }
        }
      ]
    },
    {
      "module": "module.splunk-server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "splunk-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cfaff66cce8cce97",
            "arn": "arn:aws:ec2:ap-southeast-2:709774649120:instance/i-0dd57df31cdbdc29b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 8,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dd57df31cdbdc29b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5n.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "tuskcon",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05d7241f55c21098f",
            "private_dns": "ip-10-0-1-12.ap-southeast-2.compute.internal",
            "private_ip": "10.0.1.12",
            "public_dns": "ec2-52-62-30-145.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "52.62.30.145",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-098cf5da9d59ba746",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e95860f6aacca019",
            "tags": {
              "Name": "ar-splunk-tuskcon-tuskcon-1"
            },
            "tags_all": {
              "Name": "ar-splunk-tuskcon-tuskcon-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03ae9d0688540e25e"
            ]
          },
          "dependencies": [
            "module.networkModule.aws_security_group.default",
            "module.networkModule.data.aws_availability_zones.available",
            "module.networkModule.data.http.my_public_ip",
            "module.networkModule.module.vpc.aws_subnet.public",
            "module.networkModule.module.vpc.aws_vpc.this",
            "module.networkModule.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.splunk-server.data.aws_ami.latest-ubuntu"
          ]
        }
      ]
    },
    {
      "module": "module.windows-client",
      "mode": "managed",
      "type": "aws_instance",
      "name": "windows_client",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.windows-domain-controller",
      "mode": "managed",
      "type": "aws_instance",
      "name": "windows_domain_controller",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02af4b27cfc41bd6f",
            "arn": "arn:aws:ec2:ap-southeast-2:709774649120:instance/i-04660ecbade0d9907",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 8,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04660ecbade0d9907",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5n.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "tuskcon",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-010bdba18611d7196",
            "private_dns": "ip-10-0-1-13.ap-southeast-2.compute.internal",
            "private_ip": "10.0.1.13",
            "public_dns": "ec2-52-62-84-6.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "52.62.84.6",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dadea3389ece20e9",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e95860f6aacca019",
            "tags": {
              "Name": "ar-win-dc-tuskcon-tuskcon-1"
            },
            "tags_all": {
              "Name": "ar-win-dc-tuskcon-tuskcon-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03ae9d0688540e25e"
            ]
          },
          "dependencies": [
            "module.networkModule.aws_security_group.default",
            "module.networkModule.data.aws_availability_zones.available",
            "module.networkModule.data.http.my_public_ip",
            "module.networkModule.module.vpc.aws_subnet.public",
            "module.networkModule.module.vpc.aws_vpc.this",
            "module.networkModule.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.windows-domain-controller.data.aws_ami.latest-windows-server-2019"
          ]
        }
      ]
    },
    {
      "module": "module.zeek_sensor",
      "mode": "managed",
      "type": "aws_instance",
      "name": "zeek_sensor",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b72e846931519ea3",
            "arn": "arn:aws:ec2:ap-southeast-2:709774649120:instance/i-04031163806d20957",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 8,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04031163806d20957",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5n.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "tuskcon",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0dbcd7bc4a4751f2a",
            "private_dns": "ip-10-0-1-14.ap-southeast-2.compute.internal",
            "private_ip": "10.0.1.14",
            "public_dns": "ec2-3-25-98-7.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "3.25.98.7",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ca777e775f332fc6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e95860f6aacca019",
            "tags": {
              "Name": "ar-zeek-sensor-tuskcon-tuskcon-1"
            },
            "tags_all": {
              "Name": "ar-zeek-sensor-tuskcon-tuskcon-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03ae9d0688540e25e"
            ]
          },
          "dependencies": [
            "module.networkModule.aws_security_group.default",
            "module.networkModule.data.aws_availability_zones.available",
            "module.networkModule.data.http.my_public_ip",
            "module.networkModule.module.vpc.aws_subnet.public",
            "module.networkModule.module.vpc.aws_vpc.this",
            "module.networkModule.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.zeek_sensor.data.aws_ami.latest-ubuntu"
          ]
        }
      ]
    }
  ]
}